--- a/ClientApp/src/app/modules/inward-material/inward/inward.component.html
+++ b/ClientApp/src/app/modules/inward-material/inward/inward.component.html
@@ -1,158 +1,77 @@
 
 
 <div class="container-fluid">
-    <!--success message-->
+  <!--success message-->
 <ngb-alert *ngIf="successMessage" type="success" (close)="successMessage = null">{{ successMessage }}</ngb-alert>
 <!--success message-->
-  
-    <div class="card mb-4">
-        <div class="card-header">
-            <h4 class="float-left">Inward Details</h4> 
-            <button class="btn btn-search btn-primary float-right d-sm-none"
-                (click)="toggleSearch()"><i class="icon-search"></i></button>
-                <a href="javascript:void(0)" class="btn  btn-primary float-right" routerLink="/inward-material/add-inward">Add Inward</a>
-                <!-- <button class="btn  btn-primary float-right">Add Inward</button> -->
-        </div>
-        <div class="card-body">
-            <!--table listing statrt hover-->
-            <div id="no-more-tables">
-                <!-- This id used for responsive table -->
-                <table class="table table-hover">
-                    <thead>
-                        <tr>
-                            <th scope="col" style="width:5%" class="cursor">
-                                <div class="d-flex align-items-center"><span>Title</span> <span>
-                                        &#9660;</span></div>
-                            </th>
-                           
-                            <th scope="col" style="width:20%" class="cursor">
-                                <div class="d-flex align-items-center"><span> Person Name</span> <span>&#9660;
-                                    </span></div>
-                            </th>
-                            <th scope="col" style="width:20%">
-                                <div class="d-flex align-items-center"><span>Company Name</span></div>
-                            </th>
-                            <th scope="col" style="width:30%">
-                                <div class="d-flex align-items-center"><span>Address</span></div>
-                            </th>
-                            <th scope="col" style="width:13%">
-                                <div class="d-flex align-items-center"><span>Phone</span></div>
-                            </th>
-                            
-                            <th scope="col" style="width:12%" class="text-center actions-td cursor">
-                                <div class="d-flex align-items-center justify-content-center"><span>Actions</span>
-                                    </div>
-                            </th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td data-title="Title">Mr.</td>
-                            <td data-title="Person Name">Deepak123</td>
-                            <td data-title="Company Name">Advika Pvt. Ltd.</td>
-                            <td data-title="Address">406, Bhoomi Blessing, Rahatani, Pune-411034</td>
-                            <td data-title="Phone">9999999999</td>
-                            <td data-title="Actions" class="action text-center actions-td">
-                                <div class="d-flex justify-content-center">
-                                    <a href="javascript:void(0)" routerLink="/inward-material/add-inward"> <i class="far fa-edit orange" placement="top"
-                                            ngbTooltip="View"></i></a>
-                                    <a href="javascript:void(0)">
-                                        <i class="far fa-trash-alt orange" placement="top" ngbTooltip="Delete" (click)="open(content)"></i></a>
-                                </div>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td data-title="Title">Mr.</td>
-                            <td data-title="Person Name">Deepak123</td>
-                            <td data-title="Company Name">Advika Pvt. Ltd.</td>
-                            <td data-title="Address">406, Bhoomi Blessing, Rahatani, Pune-411034</td>
-                            <td data-title="Phone">9999999999</td>
-                            <td data-title="Actions" class="action text-center actions-td">
-                                <div class="d-flex justify-content-center">
-                                    <a href="javascript:void(0)" routerLink="/inward-material/add-inward"> <i class="far fa-edit orange" placement="top"
-                                        ngbTooltip="View"></i></a>
-                                    <a href="javascript:void(0)">
-                                        <i class="far fa-trash-alt orange" placement="top" ngbTooltip="Delete" (click)="open(content)"></i></a>
-                                </div>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td data-title="Title">Mr.</td>
-                            <td data-title="Person Name">Deepak123</td>
-                            <td data-title="Company Name">Advika Pvt. Ltd.</td>
-                            <td data-title="Address">406, Bhoomi Blessing, Rahatani, Pune-411034</td>
-                            <td data-title="Phone">9999999999</td>
-                            <td data-title="Actions" class="action text-center actions-td">
-                                <div class="d-flex justify-content-center">
-                                    <a href="javascript:void(0)" routerLink="/inward-material/add-inward"> <i class="far fa-edit orange" placement="top"
-                                        ngbTooltip="View"></i></a>
-                                    <a href="javascript:void(0)">
-                                        <i class="far fa-trash-alt orange" placement="top" ngbTooltip="Delete" (click)="open(content)"></i></a>
-                                </div>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td data-title="Title">Mr.</td>
-                            <td data-title="Person Name">Deepak123</td>
-                            <td data-title="Company Name">Advika Pvt. Ltd.</td>
-                            <td data-title="Address">406, Bhoomi Blessing, Rahatani, Pune-411034</td>
-                            <td data-title="Phone">9999999999</td>
-                            <td data-title="Actions" class="action text-center actions-td">
-                                <div class="d-flex justify-content-center">
-                                    <a href="javascript:void(0)" routerLink="/inward-material/add-inward"> <i class="far fa-edit orange" placement="top"
-                                        ngbTooltip="View"></i></a>
-                                    <a href="javascript:void(0)">
-                                        <i class="far fa-trash-alt orange" placement="top" ngbTooltip="Delete" (click)="open(content)"></i></a>
-                                </div>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-                <div class="d-flex justify-content-between align-items-center table-pagination">
-                    <div class="d-flex align-items-center">
-                        Show <span class="plain-select">
-                            <select class="form-control ml-2 mr-2" id="select3">
-                                <option>10</option>
-                                <option>20</option>
-                                <option>25</option>
-                            </select>
-                        </span>
-                        Entries
-                    </div>
-                    <nav aria-label="Page navigation example">
-                        <ul class="pagination justify-content-end">
-                            <li class="page-item disabled">
-                                <a class="page-link" href="javascript:void(0)" tabindex="-1"><i
-                                        class="icon-left"></i></a>
-                            </li>
-                            <li class="page-item"><a class="page-link" href="javascript:void(0)">1</a></li>
-                            <li class="page-item active"><a class="page-link" href="javascript:void(0)">2</a></li>
-                            <li class="page-item"><a class="page-link" href="javascript:void(0)">3</a></li>
-                            <li class="page-item"><a class="page-link" href="javascript:void(0)">4</a></li>
-                            <li class="page-item">
-                                <a class="page-link" href="javascript:void(0)"><i class="icon-right"></i></a>
-                            </li>
-                        </ul>
-                    </nav>
-                </div>
-                <!--table listing end-->
-            </div>
-        </div>
-    </div>
+  <div class="card mb-4">
+      <div class="card-header">
+          <h4 class="float-left">Client Master</h4>
+              <button class="btn  btn-primary float-right" (click)="addEditInward(0)" >Add Inward</button>
+      </div>
+      <div class="card-body">
+          <!--table listing statrt hover-->
+          <div id="no-more-tables">
+              <!-- This id used for responsive table -->
+
+            <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table row-border hover">
+              <thead>
+                <tr>
+
+                  <th style="width: 15%;">Job No#</th>
+                  <th style="width: 20%;">Customer Name</th>
+                  <th style="width: 15%;">Engg Name</th>
+                  <th style="width: 10%;">Inward Date</th>
+                  <th style="width: 10%;">Delivery Date</th>
+                  <th style="width: 10%;">Outward Bill Status</th>
+                  <th style="width: 20%;" class="text-center actions-td cursor">Action</th>
+                </tr>
+              </thead>
+              <tbody *ngIf="inwards?.length != 0">
+                <tr *ngFor="let inward of inwards">
+
+                    <td data-title="Job No">{{ inward.inwardId }}</td>
+                    <td data-title="Customer Name">{{ inward.clientName }}</td>
+                    <td data-title="Engg Name">{{ inward.enggName }}</td>
+                    <td data-title="Inward Date">{{ inward.inwardDate | date: 'dd/MM/yyyy'}}</td>
+                    <td data-title="Delivery Date">{{ inward.deliveryDate | date: 'dd/MM/yyyy' }}</td>
+                    <td data-title="Outward Bill Status">{{ getInwardOutwardBillStatusById(inward.outwardBillStatus) }}</td>
+                    <td data-title="Actions" class="action text-center actions-td">
+                      <div class="d-flex justify-content-center">
+                          <a href="javascript:void(0)"> <i class="far fa-edit orange" placement="top"
+                                  ngbTooltip="View/Edit" (click)="addEditInward(inward.inwardId)" ></i></a>
+                          <a href="javascript:void(0)">
+                              <i class="far fa-trash-alt orange" placement="top"
+                               ngbTooltip="Delete" (click)="openDelete(content,inward)"></i></a>
+                      </div>
+                  </td>
+
+
+                </tr>
+                <tr *ngIf="inwards?.length == 0">
+                  <td colspan="12" class="no-data-available">No Records Found!</td>
+                </tr>
+              </tbody>
+
+            </table>
+              <!--table listing end-->
+          </div>
+      </div>
+  </div>
 </div>
 
 
+
+
 <ng-template #content let-modal>
-    <div class="modal-header">
-        <h4 class="modal-title" id="modal-basic-title"><i class="icon-select"></i> Confirm</h4>
-    </div>
-    <div class="modal-body">
-        <p class="text-center">Are you sure, you want to delete?</p>
-    </div>
-    <div class="modal-footer no-top-border">
-        <button class="btn btn-primary" (click)="changeSuccessMessage(); modal.close('Save click')">OK</button>
-        <button class="btn btn-secondary" (click)="modal.close('Save click')">Cancel</button>
-    </div>
+  <div class="modal-header">
+      <h4 class="modal-title" id="modal-basic-title"><i class="icon-select"></i> Confirm</h4>
+  </div>
+  <div class="modal-body">
+      <p class="text-center">Are you sure, you want to delete?</p>
+  </div>
+  <div class="modal-footer no-top-border">
+      <button type="button" class="btn btn-primary" (click)="modal.close(true)">OK</button>
+      <button type="button" class="btn btn-secondary" (click)="modal.close(false)">Cancel</button>
+  </div>
 </ng-template>
-
-
