--- a/ClientApp/src/assets/scss/_variables.scss
+++ b/ClientApp/src/assets/scss/_variables.scss
@@ -46,7 +46,7 @@ $blue:          #7d64f6;
 $white:         #ffffff;
 $black:         #000000;
 $border:        #d7d7d7;
-$danger:        #dd3237;
+$danger:        #796a6a;
 $placeholder:   #6c7293;
 $disabled:      #777777;
 $disabled-bg:      #e9ecef;
