--- a/ClientApp/src/app/modules/inward-material/inward/inward.component.html
+++ b/ClientApp/src/app/modules/inward-material/inward/inward.component.html
@@ -38,11 +38,18 @@
                     <td data-title="Outward Bill Status">{{ getInwardOutwardBillStatusById(inward.outwardBillStatus) }}</td>
                     <td data-title="Actions" class="action text-center actions-td">
                       <div class="d-flex justify-content-center">
-                          <a href="javascript:void(0)"> <i class="far fa-edit orange" placement="top"
-                                  ngbTooltip="View/Edit" (click)="addEditInward(inward.inwardId)" ></i></a>
-                          <a href="javascript:void(0)">
-                              <i class="far fa-trash-alt orange" placement="top"
-                               ngbTooltip="Delete" (click)="openDelete(content,inward)"></i></a>
+                        <a href="javascript:void(0)">
+                          <i class="far fa-edit orange" placement="top"
+                             ngbTooltip="Edit" (click)="addEditInward(inward.inwardId)"></i>
+                        </a>
+                        <a href="javascript:void(0)">
+                          <i class="fas fa-print orange" placement="top"
+                             ngbTooltip="Inward Print" (click)="printInward(inward.inwardId)"></i>
+                        </a>
+                        <a href="javascript:void(0)">
+                          <i class="far fa-trash-alt orange" placement="top"
+                             ngbTooltip="Delete" (click)="openDelete(content,inward)"></i>
+                        </a>
                       </div>
                   </td>
 
