--- a/ClientApp/src/app/modules/inward-material/inward-print/inward-print.component.html
+++ b/ClientApp/src/app/modules/inward-material/inward-print/inward-print.component.html
@@ -4,8 +4,10 @@
   <meta charset="utf-8">
   <title>Example 1</title>
   <!--<link rel="stylesheet" href="style.css" media="all" />-->
+  <link href='https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap' rel='stylesheet' type='text/css'>
+
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
+    /* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap'); */
 
     .clearfix:after {
       content: "";
@@ -20,7 +22,7 @@
 
     body {
       position: relative;
-      width: 21cm;
+      /* width: 21cm; */
       height: auto;
       margin: 0 auto;
       color: #001028;
@@ -155,57 +157,175 @@
       text-align: center;
       margin: 30px 0;
     }
+    @media print {
+        body {
+           font-family:Arial, Helvetica, sans-serif !important;
+           font-family: 'Poppins', sans-serif !important;
+           padding: 0 !important;
+        } 
+      }
   </style>
 </head>
-<body>
-  <header class="clearfix">
-    <div id="logo">
-      <table style="background:transparent; margin-bottom:0">
+<body style="padding: 0 0px; font-family: 'Poppins', sans-serif !important;">
+  <div class="clearfix" style="padding: 0px 0;
+  margin-bottom: 10px;
+  border: 0px solid #ccc;
+  margin-top: 10px;">
+    <div id="logo" style=" text-align: center;
+    margin-bottom: 10px;">
+      <table style="background:transparent; margin-bottom:0; width: 100%;">
         <tr>
-          <td style="padding:0; background: transparent">
-            <h4>GOPAL</h4>
-            <p>Computers</p>
+          <td style="padding:0; width: 50%; background: transparent">
+            <h4 style="font-weight: 700;
+            font-size: 2.375rem;
+            letter-spacing: 3px;
+            color: #1c0f3a;
+            margin: 0;
+            text-align: left;font-family: 'Poppins', sans-serif !important;">GOPAL</h4>
+            <p style="font-size: 0.875rem;
+            line-height: 7px;
+            letter-spacing: 0.406rem;
+            text-transform: uppercase;
+            position: relative;
+            left: 3px;
+            color: #FF4081;
+            font-weight: 600;
+            margin: 0 0 10px 0;
+            text-align: left;">Computers</p>
           </td>
-          <td style="padding:0; background: transparent; text-align: right;"><img [src]="APIURL+'Uploads/'+inward.barCode" id="barCode" /></td>
+          <td style="padding:0; background: transparent; width: 50%; text-align: right;"><img style=" width: 30%;
+            margin-right: 7px;" [src]="APIURL+'Uploads/'+inward.barCode" id="barCode" /></td>
         </tr>
       </table>
     </div>
-    <div class="address">
+    <div class="address" style=" border-top: 1px solid #C1CED9;
+    border-bottom: 1px solid #C1CED9;
+    margin: 0 0 0px 0;
+    padding: 7px;
+    background: #f5f5f5;">
       <p style="margin:0; font-weight:500; font-size: 14px;">
         Flat No 4, B Wing, Viththal Park, Samant Vadi, Near Ashok Stambh, Kashiba Medical Back side, Gangapur Road, Nashik - 422002.
         <strong>Contact</strong>: 9867545678, 9867545678
       </p>
     </div>
-  </header>
+  </div>
   <main>
-    <table class="bill-table">
+    <table class="bill-table" style=" background: transparent;
+    margin-bottom: 0;
+    border: 1px solid #ccc;
+    width: 100%;
+    border-collapse: collapse;
+    border-spacing: 0;
+    margin-bottom: 20px;">
       <thead>
         <tr>
-          <th style="text-align:left">Inward Slip</th>
-          <th style="text-align:right">Customer</th>
+          <th style="text-align:left;   background: #F5F5F5;
+          color: #000;
+          border-bottom: 1px solid #C1CED9;
+          font-size: 18px;
+          white-space: nowrap;
+          font-weight: 600;padding: 8px 10px !important;">Inward Slip</th>
+          <th style="text-align:right;  background: #F5F5F5;
+          color: #000;
+          border-bottom: 1px solid #C1CED9;
+          font-size: 18px;
+          white-space: nowrap;
+          font-weight: 600;padding: 8px 10px !important;">Customer</th>
         </tr>
       </thead>
       <tbody>
         <tr>
-          <td>
-            <div id="project">
-              <div><span>Job Number</span>: {{inward.inwardId}}</div>
-              <div><span>Inward Date</span>: {{inward.inwardDate | date:'dd/MM/yyyy'}}</div>
-              <div><span>Client Name</span>: {{inward.companyName}}</div>
-              <div><span>Client Phone #</span>: {{inward.mobileNumber}}</div>
-              <div><span>Material Name</span>: {{inward.modelNo}}, {{inward.materialType}}, {{inward.companyName}}</div>
-              <div><span>Accessories Recieved</span>: {{inward.accessories != '' ? 'YES' : 'NO'}}</div>
-              <div><span>Serial No</span>: {{inward.serialNo}}</div>
-              <div><span>Problem Description</span>: {{inward.problemDescription}}</div>
-              <div><span>Engg. Name</span>: {{inward.enggName}}</div>
-              <div><span>Problem Detected</span>: {{inward.isProblemDetected == '1' ? 'YES' : 'NO'}}</div>
-              <div><span>Advanced Amount</span>: {{inward.advanceAmount}}/-</div>
+          <td style=" padding: 7px;
+          background: transparent;
+          font-size: 13px;
+          line-height: 27px; vertical-align: top;">
+            <div id="project" style=" float: left;">
+              <div style=" white-space: nowrap;color: #605c5c; font-weight: 500;"><span style=" color: #000;
+                text-align: left;
+                width: 160px;
+                margin-right: 10px;
+                display: inline-block;
+                font-weight: 600;">Job Number</span>: {{inward.inwardId}}</div>
+              <div style=" white-space: nowrap;color: #605c5c; font-weight: 500;"><span style=" color: #000;
+                text-align: left;
+                width: 160px;
+                margin-right: 10px;
+                display: inline-block;
+                font-weight: 600;">Inward Date</span>: {{inward.inwardDate | date:'dd/MM/yyyy'}}</div>
+              <div style=" white-space: nowrap;color: #605c5c; font-weight: 500;"><span style=" color: #000;
+                text-align: left;
+                width: 160px;
+                margin-right: 10px;
+                display: inline-block;
+                font-weight: 600;">Client Name</span>: {{inward.companyName}}</div>
+              <div style=" white-space: nowrap;color: #605c5c; font-weight: 500;"><span style=" color: #000;
+                text-align: left;
+                width: 160px;
+                margin-right: 10px;
+                display: inline-block;
+                font-weight: 600;">Client Phone #</span>: {{inward.mobileNumber}}</div>
+              <div style=" white-space: nowrap;color: #605c5c; font-weight: 500;"><span style=" color: #000;
+                text-align: left;
+                width: 160px;
+                margin-right: 10px;
+                display: inline-block;
+                font-weight: 600;">Material Name</span>: {{inward.modelNo}}, {{inward.materialType}}, {{inward.companyName}}</div>
+              <div style=" white-space: nowrap;color: #605c5c; font-weight: 500;"><span style=" color: #000;
+                text-align: left;
+                width: 160px;
+                margin-right: 10px;
+                display: inline-block;
+                font-weight: 600;">Accessories Recieved</span>: {{inward.accessories != '' ? 'YES' : 'NO'}}</div>
+              <div style=" white-space: nowrap;color: #605c5c; font-weight: 500;"><span style=" color: #000;
+                text-align: left;
+                width: 160px;
+                margin-right: 10px;
+                display: inline-block;
+                font-weight: 600;">Serial No</span>: {{inward.serialNo}}</div>
+              <div style=" white-space: nowrap;color: #605c5c; font-weight: 500;"><span style=" color: #000;
+                text-align: left;
+                width: 160px;
+                margin-right: 10px;
+                display: inline-block;
+                font-weight: 600;">Problem Description</span>: {{inward.problemDescription}}</div>
+              <div style=" white-space: nowrap;color: #605c5c; font-weight: 500;"><span style=" color: #000;
+                text-align: left;
+                width: 160px;
+                margin-right: 10px;
+                display: inline-block;
+                font-weight: 600;">Engg. Name</span>: {{inward.enggName}}</div>
+              <div style=" white-space: nowrap;color: #605c5c; font-weight: 500;"><span style=" color: #000;
+                text-align: left;
+                width: 160px;
+                margin-right: 10px;
+                display: inline-block;
+                font-weight: 600;">Problem Detected</span>: {{inward.isProblemDetected == '1' ? 'YES' : 'NO'}}</div>
+              <div style=" white-space: nowrap;color: #605c5c; font-weight: 500;"><span style=" color: #000;
+                text-align: left;
+                width: 160px;
+                margin-right: 10px;
+                display: inline-block;
+                font-weight: 600;">Advanced Amount</span>: {{inward.advanceAmount}}/-</div>
             </div>
           </td>
-          <td>
-            <div id="project" class="clearfix" style="float: right;">
-              <div><span>Delivery Date</span>: {{inward.deliveryDate | date:'dd/MM/yyyy'}}</div>
-              <div><span>Est. LAbour Charges</span>: {{inward.estmRepairingAmount}}/-</div>
+          <td style=" padding: 7px;
+          background: transparent;
+          font-size: 13px;
+          line-height: 27px; vertical-align: top;">
+            <div id="project" class="clearfix" style="   float: right;
+            text-align: right;">
+              <div style=" white-space: nowrap;color: #605c5c; font-weight: 500;"><span style="  color: #000;
+                text-align: right;
+                width: 160px;
+                margin-right: 10px;
+                display: inline-block;
+                font-weight: 600;">Delivery Date</span>: {{inward.deliveryDate | date:'dd/MM/yyyy'}}</div>
+              <div style=" white-space: nowrap;color: #605c5c; font-weight: 500;"><span style="  color: #000;
+                text-align: right;
+                width: 160px;
+                margin-right: 10px;
+                display: inline-block;
+                font-weight: 600;">Est. LAbour Charges</span>: {{inward.estmRepairingAmount}}/-</div>
 
             </div>
           </td>
@@ -214,16 +334,16 @@
     </table>
     <div id="notices">
       <div><strong>NOTICE:</strong></div>
-      <ul>
-        <li>A finance charge of 1.5% will be made on unpaid balances after 30 days.</li>
-        <li>A finance charge of 1.5% will be made on unpaid balances after 30 days.</li>
+      <ul style="  padding: 0 13px;margin: 5px;">
+        <li style="font-size: 13px;">A finance charge of 1.5% will be made on unpaid balances after 30 days.</li>
+        <li style="font-size: 13px;">A finance charge of 1.5% will be made on unpaid balances after 30 days.</li>
       </ul>
     </div>
     <table style="margin-top:160px; margin-bottom:30px; width: 100%">
       <tr>
-        <td style="padding:7px; text-align:left">
+        <td style="padding:7px; text-align:left;font-size: 13px;">
           <strong>Customer Signature</strong>
-        <td style="padding:0; text-align:right">
+        <td style="padding:0; text-align:right;font-size: 13px;">
           <strong>Authorized Signature</strong>
         </td>
       </tr>
@@ -232,4 +352,6 @@
 
 </body>
 </html>
-<button printSectionId="print-section" ngxPrint>print</button>
+<div style="text-align: center; padding-bottom: 15px;">
+<button printSectionId="print-section" ngxPrint class="btn btn-primary btn-sm">print</button>
+</div>
