--- a/ClientApp/src/app/modules/inward-material/inward/inward.component.html
+++ b/ClientApp/src/app/modules/inward-material/inward/inward.component.html
@@ -6,7 +6,7 @@
 <!--success message-->
   <div class="card mb-4">
       <div class="card-header">
-          <h4 class="float-left">Client Master</h4>
+          <h4 class="float-left">Inward</h4>
               <button class="btn  btn-primary float-right" (click)="addEditInward(0)" >Add Inward</button>
       </div>
       <div class="card-body">
