bill and outward

--- a/ClientApp/src/app/shared/sidebar/sidebar.component.html
+++ b/ClientApp/src/app/shared/sidebar/sidebar.component.html
@@ -97,6 +97,16 @@
                     routerLinkActive="active" #inwardAccessories="routerLinkActive"><i class="fas fa-circle"></i>
                     Inward Accessories</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link" (click)="deviceSidemenuCollapse()" routerLink="/inward-material/bill-generation"
+                    routerLinkActive="active" #billGeneration="routerLinkActive"><i class="fas fa-circle"></i>
+                    Bill Generation</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" (click)="deviceSidemenuCollapse()" routerLink="/inward-material/outward"
+                    routerLinkActive="active" #outward="routerLinkActive"><i class="fas fa-circle"></i>
+                    Outward</a>
+                </li>
               </ul>
             </div>
           </li>
