--- a/ClientApp/src/app/shared/camera/camera.component.html
+++ b/ClientApp/src/app/shared/camera/camera.component.html
@@ -5,7 +5,7 @@
        (initError)="handleInitError($event)"></webcam>
       <br/>
       <div class="actionBtn" (click)="triggerSnapshot();" title="Take Picture">📸</div>
-      <div class="actionBtn" (click)="showNextWebcam(true);" title="Switch Camera">🔁</div>
+     <!--  <div class="actionBtn" (click)="showNextWebcam(true);" title="Switch Camera">🔁</div> -->
     </div>
   </div>
 
