prin inward button added

--- a/ClientApp/src/app/modules/inward-material/add-inward/add-inward.component.html
+++ b/ClientApp/src/app/modules/inward-material/add-inward/add-inward.component.html
@@ -465,6 +465,9 @@
       </div>
       <footer>
           <button class="btn btn-secondary" (click)="GoToInwardList()" >Cancel</button>
+          <button type="submit" (click)="PrintInward()" *ngIf="inward.inwardId>0" class="btn btn-success">
+            Print Inward
+        </button>
           <button type="submit" (click)="PrintInwardBarcode()" *ngIf="inward.inwardId>0" class="btn btn-success">
             Print BarCode
         </button>
