--- a/ClientApp/src/app/modules/inward-material/inward-print/inward-print.component.html
+++ b/ClientApp/src/app/modules/inward-material/inward-print/inward-print.component.html
@@ -14,13 +14,13 @@
            font-family:Arial, Helvetica, sans-serif !important;
            font-family: 'Poppins', sans-serif !important;
            padding: 0 !important;
-        }  
+        }
       }
   </style>
 </head>
 <body style="padding: 0 0px;page-break-after:always; background: #fff; font-family: 'Poppins', sans-serif !important;">
     <!--customer-copy-start-->
-    
+
   <div class="clearfix" style="padding: 0px 0;
   margin-bottom: 10px;
   border: 0px solid #ccc;
@@ -48,7 +48,7 @@
             text-align: left;">Computers</p>
           </td>
           <td style="padding:0; background: transparent; width: 50%; text-align: right;"><img style="
-            margin-right: 7px;" [src]="APIURL+'Uploads/'+inward.barCode" id="barCode" /></td>
+            margin-right: 7px;" [src]="APIURL+'Uploads/simple_'+inward.barCode" id="barCode" /></td>
         </tr>
       </table>
     </div>
@@ -234,7 +234,7 @@
             text-align: left;">Computers</p>
           </td>
           <td style="padding:0; background: transparent; width: 50%; text-align: right;"><img style="
-            margin-right: 7px;" [src]="APIURL+'Uploads/'+inward.barCode" id="barCode" /></td>
+            margin-right: 7px;" [src]="APIURL+'Uploads/simple_'+inward.barCode" id="barCode" /></td>
         </tr>
       </table>
     </div>
