--- a/ClientApp/src/app/modules/inward-material/inward-print/inward-print.component.html
+++ b/ClientApp/src/app/modules/inward-material/inward-print/inward-print.component.html
@@ -48,7 +48,7 @@
             text-align: left;">Computers</p>
           </td>
           <td style="padding:0; background: transparent; width: 50%; text-align: right;"><img style="
-            margin-right: 7px;" [src]="APIURL+'Uploads/'+inward.barCode" id="barCode" /></td>
+            margin-right: 7px;" [src]="APIURL+'Uploads/simple_'+inward.barCode" id="barCode" /></td>
         </tr>
       </table>
     </div>
@@ -111,7 +111,7 @@
                 width: 160px;
                 margin-right: 10px;
                 display: inline-block;
-                font-weight: 600;">Client Name</span>: {{inward.companyName}}</div>
+                font-weight: 600;">Client Name</span>: {{inward.clientName}}</div>
               <div style=" white-space: nowrap;color: #605c5c; font-weight: 500;"><span style=" color: #000;
                 text-align: left;
                 width: 160px;
@@ -190,7 +190,6 @@
       <div><strong>NOTICE:</strong></div>
       <ul style="  padding: 0 13px;margin: 5px;">
         <li style="font-size: 13px;">A finance charge of 1.5% will be made on unpaid balances after 30 days.</li>
-        <li style="font-size: 13px;">A finance charge of 1.5% will be made on unpaid balances after 30 days.</li>
       </ul>
     </div>
     <table style="margin-top:60px; margin-bottom:30px; width: 100%">
@@ -234,7 +233,7 @@
             text-align: left;">Computers</p>
           </td>
           <td style="padding:0; background: transparent; width: 50%; text-align: right;"><img style="
-            margin-right: 7px;" [src]="APIURL+'Uploads/'+inward.barCode" id="barCode" /></td>
+            margin-right: 7px;" [src]="APIURL+'Uploads/simple_'+inward.barCode" id="barCode" /></td>
         </tr>
       </table>
     </div>
@@ -297,7 +296,7 @@
                 width: 160px;
                 margin-right: 10px;
                 display: inline-block;
-                font-weight: 600;">Client Name</span>: {{inward.companyName}}</div>
+                font-weight: 600;">Client Name</span>: {{inward.clientName}}</div>
               <div style=" white-space: nowrap;color: #605c5c; font-weight: 500;"><span style=" color: #000;
                 text-align: left;
                 width: 160px;
@@ -375,7 +374,6 @@
     <div id="notices">
       <div><strong>NOTICE:</strong></div>
       <ul style="  padding: 0 13px;margin: 5px;">
-        <li style="font-size: 13px;">A finance charge of 1.5% will be made on unpaid balances after 30 days.</li>
         <li style="font-size: 13px;">A finance charge of 1.5% will be made on unpaid balances after 30 days.</li>
       </ul>
     </div>
