--- a/ClientApp/src/app/modules/inward-material/material-type/material-type.component.html
+++ b/ClientApp/src/app/modules/inward-material/material-type/material-type.component.html
@@ -2,7 +2,7 @@
     <!--success message-->
 <ngb-alert *ngIf="successMessage" type="success" (close)="successMessage = null">{{ successMessage }}</ngb-alert>
 <!--success message-->
-    <div class="card mb-4">
+    <div class="card mb-4 list-card">
         <div class="card-header">
             <h4 class="float-left">Model No / Material Type / Company Name</h4> 
                 <button class="btn  btn-primary float-right" (click)="addSearchModelNoMaterialTypePopup(0)">Add Material Type</button>
