--- a/ClientApp/src/app/modules/master/customer/customer-list/customer-list.component.html
+++ b/ClientApp/src/app/modules/master/customer/customer-list/customer-list.component.html
@@ -4,7 +4,7 @@
     <!--success message-->
 <ngb-alert *ngIf="successMessage" type="success" (close)="successMessage = null">{{ successMessage }}</ngb-alert>
 <!--success message-->
-    <div class="card mb-4">
+    <div class="card mb-4 list-card">
         <div class="card-header">
             <h4 class="float-left">Client Master</h4>
                 <button class="btn  btn-primary float-right" (click)="addClientPopup(null)">Add Customer</button>
