--- a/ClientApp/src/assets/scss/_global.scss
+++ b/ClientApp/src/assets/scss/_global.scss
@@ -325,6 +325,23 @@ input[type=number] {
             }
         }
     }
+    @media screen and (max-width:769px){
+    &.list-card {
+        background: transparent;
+        margin-bottom: 0 !important;
+        .card-header {
+            padding-left: 0;
+            padding-right: 0;
+            margin-bottom: 1rem;
+            h4 {
+                font-size: 1.3rem;
+            }
+        }
+        .card-body {
+            padding: 0;
+        }
+    }
+}
 }
 
 
